k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ifctoolkit-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ifctoolkit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ifctoolkit-service
                port:
                  number: 80
    - host: www.ifctoolkit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ifctoolkit-service
                port:
                  number: 80
